# hw4-numerical-modeling

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hw4xcode/: models.cpp  models.hpp
hw4xcode/hw4xcode/: main.cpp  outputData.csv
hw4xcode/hw4xcode.xcodeproj/: project.pbxproj
hw4xcode/hw4xcode.xcodeproj/project.xcworkspace/xcuserdata/aghos.xcuserdatad/: UserInterfaceState.xcuserstate
hw4xcode/hw4xcode.xcodeproj/project.xcworkspace/xcuserdata/aghos.xcuserdatad/xcdebugger/: Expressions.xcexplist
hw4xcode/hw4xcode.xcodeproj/xcshareddata/xcschemes/: hw4xcode.xcscheme
hw4xcode/hw4xcode.xcodeproj/xcuserdata/aghos.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hw4xcode/hw4xcode.xcodeproj/xcuserdata/aghos.xcuserdatad/xcschemes/: xcschememanagement.plist
hw4xcode/include/: models.hpp
hw4xcode/src/: main.cpp  models.cpp  outputData.csv
src/: main.cpp
writeup/: writeup.md
